--- a/appState.json
+++ b/appState.json
@@ -28,17 +28,24 @@
           "runtime": "nodejs8",
           "timeout": 60,
           "memory": 128,
-          "triggerType": 1,
+          "triggerType": 0,
           "handler": "handler"
         },
         "triggers": [
           {
-            "resourceName": "storageinduniltest1",
-            "config": {
-              "type": "google.storage.object.metadataUpdate"
-            }
+            "resourceName": "http-trigger",
+            "config": {}
           }
-        ]
+        ],
+        "testCases": {
+          "8abc340a-1e1c-4705-b14f-d1e3bce386eb": {
+            "id": "8abc340a-1e1c-4705-b14f-d1e3bce386eb",
+            "name": "Test event",
+            "functionId": "0a35fd1a-f025-4f30-a0c8-92b8ca4000b6",
+            "event": "{\r\n    \"key1\": \"value1\",\r\n    \"key2\": \"value2\",\r\n    \"key3\": \"value3\"\r\n}",
+            "eventTemplate": "hello-world"
+          }
+        }
       },
       "05e1f4ce-86fe-4b6e-8f81-ad15dd78b4e4": {
         "id": "05e1f4ce-86fe-4b6e-8f81-ad15dd78b4e4",
@@ -89,6 +96,11 @@
             "name": "induniltest1"
           }
         }
+      },
+      "http-trigger": {
+        "name": "http-trigger",
+        "type": "http-trigger",
+        "config": {}
       }
     },
     "customTemplate": {
@@ -115,7 +127,7 @@
     "projectRegion": "us-east1",
     "platform": "GCP",
     "platformRegions": {},
-    "lastSave": 1568701982103
+    "lastSave": 1568702735406
   },
   "VCS_STATE": {
     "provider": "GitHub",
