--- a/appState.json
+++ b/appState.json
@@ -23,7 +23,7 @@
         "children": [],
         "isRemovable": true,
         "filePath": "teststorage/function.js",
-        "code": "let google = require('googleapis').google;\nlet _auth = require('./Authorizer');\nconst storage = google.storage('v1');\n\nexports.handler = function (request, response) {\n    storage.objects.list({\n        bucket: 'induniltest1',\n        maxResults: 10,\n        prefix: ''\n    })\n        .then(response => {\n              console.log(\"successss\");\n            console.log(response.data);           // successful response\n            /*\n    \n            WARNING: response.data.items will be missing altogether (instead of being empty) if there are no matches!  \n    \n            response.data = {\n                \"kind\": \"storage#objects\",\n                \"items\": [\n                    {\n                        \"kind\": \"storage#object\",\n                        \"id\": \"<bucket>/<object>/<timestamp>\",\n                        \"selfLink\": \"https://www.googleapis.com/storage/v1/b/<bucket>/o/<object>\",\n                        \"name\": \"<object>\",\n                        \"bucket\": \"<bucket>\",\n                        \"contentType\": \"<content-type>\",\n                        \"timeCreated\": \"<yyyy-MM-ddTHH:mm:ss.###Z>\",\n                        \"updated\": \"<yyyy-MM-ddTHH:mm:ss.###Z>\",\n                        \"size\": \"<bytes>\",\n                        \"md5Hash\": \"<hash>\",\n                        \"metadata\": {\n                            \"<key1>\": \"<val1>\",\n                            \"<key2>\": \"<val2>\"\n                        },\n                        \"crc32c\": \"<crc>\",\n                        \"etag\": \"<etag>\"\n                        // , ...\n                    }\n                    // , ...\n                ]\n            }\n            */\n        })\n        .catch(err => {\n            console.log(\"errrrrr\");\n            console.log(err, err.stack); // an error occurred\n            \n        });\n\n    response.send({ \"message\": \"Successfully executed\" });\n}",
+        "code": "\nexports.handler = function (request, response) {\n  \n    response.send({ \"message\": \"Successfully executed\" });\n}",
         "config": {
           "runtime": "nodejs8",
           "timeout": 60,
@@ -45,6 +45,13 @@
         "testCases": {
           "8abc340a-1e1c-4705-b14f-d1e3bce386eb": {
             "id": "8abc340a-1e1c-4705-b14f-d1e3bce386eb",
+            "name": "Test event",
+            "functionId": "0a35fd1a-f025-4f30-a0c8-92b8ca4000b6",
+            "event": "{\r\n    \"key1\": \"value1\",\r\n    \"key2\": \"value2\",\r\n    \"key3\": \"value3\"\r\n}",
+            "eventTemplate": "hello-world"
+          },
+          "f143ddd9-bedc-45c4-9674-ba151ac60f24": {
+            "id": "f143ddd9-bedc-45c4-9674-ba151ac60f24",
             "name": "Test event",
             "functionId": "0a35fd1a-f025-4f30-a0c8-92b8ca4000b6",
             "event": "{\r\n    \"key1\": \"value1\",\r\n    \"key2\": \"value2\",\r\n    \"key3\": \"value3\"\r\n}",
@@ -137,7 +144,7 @@
     "projectRegion": "us-east1",
     "platform": "GCP",
     "platformRegions": {},
-    "lastSave": 1568703031933
+    "lastSave": 1568703555980
   },
   "VCS_STATE": {
     "provider": "GitHub",
